--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Sam's Blog",
+    "subTitle":"My daily learning journal.",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/79125867?v=4",
     "GMEEK_VERSION":"last"
 }
