--- a/config.json
+++ b/config.json
@@ -3,7 +3,6 @@
     "subTitle":"My daily learning journal.",
     "avatarUrl":"https://avatars.githubusercontent.com/u/79125867?v=4",
     "GMEEK_VERSION":"last",
-    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>"
-
-
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/articletoc.js'></script>"
 }
